# diffusion-audio-restoration-windows

./: .gitignore  LICENSE-NOTICES.txt  README-WINDOWS.md  README.md  changelog.md  pyproject.toml
LICENSES/: FFMPEG_NOTICE.txt  NVIDIA_A2SB_LICENSE.txt  PYTHON_NOTICE.txt
datasets/: datasets.py
docs/: LICENSE_NOTICES.md  RELEASE_CHECKLIST.md  RELEASE_EVIDENCE.md  TROUBLESHOOTING.md  UPSTREAM_AUDIT.md  USER_GUIDE.md  WHAT_SETUP_INSTALLS.md
installer/: a2sb-restorer.iss
launcher/: launcher.py  launcher.spec
requirements/: build.txt  gui.txt  lock-win-cu121.txt  win-cu121.txt
rolling_a2sb/: __init__.py  app.py  audio_prepare.py  audio_probe.py  checkpoint_manager.py  cli.py  config_builder.py  downloader.py  errors.py  gui.py  gui_actions.py  job.py  log.py  paths.py  release.py  runtime_check.py  settings.py  subprocess_runner.py  worker.py  workflow.py
scripts/: build_installer.ps1  build_launcher.ps1  collect_release_evidence.ps1  doctor.ps1  fetch_ffmpeg.ps1  generate_icon.ps1  installed_app_smoke.ps1  prefill_release_evidence.ps1  release_status.ps1  repair_runtime.ps1  setup_runtime.ps1  smoke_restore.ps1  write_sha256sums.ps1
tests/: test_app.py  test_audio_prepare.py  test_audio_probe.py  test_checkpoint_manager.py  test_cli.py  test_config_builder.py  test_downloader.py  test_errors.py  test_gui_actions.py  test_gui_source.py  test_job.py  test_launcher_installer.py  test_paths.py  test_product_safety.py  test_release.py  test_release_scaffold.py  test_runtime_check.py  test_runtime_scripts.py  test_settings.py  test_worker.py  test_workflow.py
(+5 files in other folders)
